nav bar links fixed

--- a/client/views/profile.html
+++ b/client/views/profile.html
@@ -1,13 +1,13 @@
 <nav class="blue">
     <div class="nav-wrapper">
-        <a href="/" class="brand-logo">Stubby Pencil Scoring</a>
+        <a href="#/" class="brand-logo">Stubby Pencil Scoring</a>
         <a href="#" class="button-collapse" data-activates="mobile-demo"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
-            <li><a href="/">Home</a></li>
+            <li><a href="#/">Home</a></li>
             <li><a href="/logout">Log Out</a></li>
         </ul>
         <ul class="side-nav" id="mobile-demo">
-            <li><a href="/">Home</a></li>
+            <li><a href="#/">Home</a></li>
             <li><a href="/logout">Log Out</a></li>
         </ul>
     </div>
@@ -21,7 +21,7 @@
         <img class="photos" src="https://hd.unsplash.com/uploads/1413142095961484763cf/d141726c" alt="user person" />
         <h1 class="center">{{first_name}}</h1>
 
-        <a href="/creategame" class="waves-effect waves-light btn">Create A Game</a>
+        <a href="#/creategame" class="waves-effect waves-light btn">Create A Game</a>
 
     </div>
 </div>
