--- a/client/views/creategame.html
+++ b/client/views/creategame.html
@@ -1,15 +1,15 @@
 <nav class="blue">
     <div class="nav-wrapper">
-        <a href="/" class="brand-logo">Stubby Pencil Scoring</a>
+        <a href="#/" class="brand-logo">Stubby Pencil Scoring</a>
         <a href="#" class="button-collapse" data-activates="mobile-demo"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
-            <li><a href="/">Home</a></li>
-            <li><a href="/profile">Profile</a></li>
+            <li><a href="/#/">Home</a></li>
+            <li><a href="#/profile">Profile</a></li>
             <li><a href="/logout">Log Out</a></li>
         </ul>
         <ul class="side-nav" id="mobile-demo">
-            <li><a href="/">Home</a></li>
-            <li><a href="/profile">Profile</a></li>
+            <li><a href="#/">Home</a></li>
+            <li><a href="#/profile">Profile</a></li>
             <li><a href="/logout">Log Out</a></li>
         </ul>
     </div>
