--- a/client/views/login.html
+++ b/client/views/login.html
@@ -1,14 +1,14 @@
 <nav class="blue">
     <div class="nav-wrapper">
-        <a href="/" class="brand-logo">Stubby Pencil Scoring</a>
+        <a href="#/" class="brand-logo">Stubby Pencil Scoring</a>
         <a href="#" class="button-collapse" data-activates="mobile-demo"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
-            <li><a href="/">Home</a></li>
-            <li><a href="/signup">Sign Up</a></li>
+            <li><a href="#/">Home</a></li>
+            <li><a href="#/signup">Sign Up</a></li>
         </ul>
         <ul class="side-nav" id="mobile-demo">
-            <li><a href="/">Home</a></li>
-            <li><a href="/signup">Sign Up</a></li>
+            <li><a href="#/">Home</a></li>
+            <li><a href="#/signup">Sign Up</a></li>
         </ul>
     </div>
 </nav>
