--- a/client/views/main.html
+++ b/client/views/main.html
@@ -1,28 +1,23 @@
-
 <nav class="blue">
   <div class="nav-wrapper">
     <a href="#/" class="brand-logo">Stubby Pencil Scoring</a>
     <a href="#" class="button-collapse" data-activates="mobile-demo"><i class="material-icons">menu</i></a>
-    <ul class="right hide-on-med-and-down">
-      <li><a href="#/signup">Sign Up</a></li>
-      <li><a href="#/login">Log In</a></li>
-    </ul>
-    <ul class="side-nav" id="mobile-demo">
-      <li><a href="#/profile">Sign Up</a></li>
-      <li><a href="#/login">Log In</a></li>
-    </ul>
   </div>
 </nav>
 
 <div class="background"></div>
 
-<div class="container">
-    <div class="row">
-        <div class="col s12">
-            <div class="card-panel center-align z-depth-0">
-                <span class="black-text">Create customizable scorecards for any game!
-      </span>
-            </div>
-        </div>
+<div class="container center-align">
+  <div class="row">
+    <div class="col s12">
+      <div class="card-panel center-align z-depth-0">
+        <span class="black-text">Create customizable scorecards for any game!</span>
+      </div>
     </div>
+  </div>
+  <div class="registerButtons">
+    <a ng-click="facebookAuth()" class="waves-effect waves-light btn">Register with Facebook</a>
+    <a href="#/signup" class="waves-effect waves-light btn">Sign Up with Email</a>
+    <a href="#/login" class="waves-effect waves-light btn">Log In with Email</a>
+  </div>
 </div>
