facebook auth works

--- a/client/views/main.html
+++ b/client/views/main.html
@@ -16,7 +16,7 @@
     </div>
   </div>
   <div class="registerButtons">
-    <a ng-click="facebookAuth()" class="waves-effect waves-light btn">Register with Facebook</a>
+    <a href="/auth/facebook" target="_self" class="waves-effect waves-light btn">Register with Facebook</a>
     <a href="#/signup" class="waves-effect waves-light btn">Sign Up with Email</a>
     <a href="#/login" class="waves-effect waves-light btn">Log In with Email</a>
   </div>
