--- a/client/views/profile.html
+++ b/client/views/profile.html
@@ -3,11 +3,11 @@
         <a href="#/" class="brand-logo">Stubby Pencil Scoring</a>
         <a href="#" class="button-collapse" data-activates="mobile-demo"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
-            <li><a href="#/">Home</a></li>
+            <li><a href="/#/">Home</a></li>
             <li><a href="/logout">Log Out</a></li>
         </ul>
         <ul class="side-nav" id="mobile-demo">
-            <li><a href="#/">Home</a></li>
+            <li><a href="/#/">Home</a></li>
             <li><a href="/logout">Log Out</a></li>
         </ul>
     </div>
