--- a/client/views/signup.html
+++ b/client/views/signup.html
@@ -16,50 +16,47 @@
 
 
 <div class="container">
-    <div class="container center-align">
-        <a class="btn waves-effect waves-light" href="/signup/auth/facebook">Sign Up With Facebook
-  </a>
-    </div>
+  <p class="error">{{error}}</p>
     <div class="row">
-        <form action="/signup" method="post" class="col s12">
+        <form name="signUp" ng-submit="submitSignUp(newUser)" class="col s12">
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="first_name" type="text" class="validate" name="first_name">
+                    <input id="first_name" type="text" class="validate" name="first_name" ng-model="newUser.first_name">
                     <label for="fname">First Name</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="last_name" type="text" class="validate" name="last_name">
+                    <input id="last_name" type="text" class="validate" name="last_name" ng-model="newUser.last_name">
                     <label for="lname">Last Name</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="user_name" type="text" class="validate" name="user_name">
+                    <input id="user_name" type="text" class="validate" name="user_name" ng-model="newUser.user_name">
                     <label for="uname">Username</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="image" type="text" class="validate" name="image" value="https://unsplash.it/200/?random">
+                    <input id="image" type="text" class="validate" name="image" ng-model="newUser.image">
                     <label for="img">Profile Picture</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="email" type="email" class="validate" name="email">
+                    <input id="email" type="email" class="validate" name="email" ng-model="newUser.email">
                     <label for="em">Email</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="password" type="password" class="validate" name="password">
+                    <input id="password" type="password" class="validate" name="password" ng-model="newUser.password">
                     <label for="pw">Password</label>
                 </div>
             </div>
             <div class="container center-align">
-                <button class="btn waves-effect waves-light" type="submit" name="action" value="submit">Submit
+                <button class="btn waves-effect waves-light" type="submit" name="action" value="submit" ng-disabled="signUp.$invalid ">Submit
             </button>
             </div>
         </form>
