--- a/client/views/login.html
+++ b/client/views/login.html
@@ -16,21 +16,21 @@
 
 <div class="container">
     <div class="row">
-        <form action="/login" method="post" class="col s12">
+        <form name="logIn" ng-submit="submitLogIn(returningUser)" class="col s12">
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="email" type="email" class="validate" name="email">
-                    <label for="em">Email</label>
+                    <input id="email" type="email" class="validate" name="email" ng-model="returningUser.email">
+                    <label for="email">Email</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="password" type="password" class="validate" name="password">
-                    <label for="pw">Password</label>
+                    <input id="password" type="password" class="validate" name="password" ng-model="returningUser.password">
+                    <label for="password">Password</label>
                 </div>
             </div>
             <div class="container center-align">
-                <button class="btn waves-effect waves-light" type="submit" name="action" value="submit">Submit
+                <button class="btn waves-effect waves-light" type="submit" name="action" value="submit" ng-disabled="logIn.$invalid ">Submit
             </button>
             </div>
         </form>
