login works with error handling

--- a/client/views/login.html
+++ b/client/views/login.html
@@ -14,7 +14,9 @@
 </nav>
 <br>
 
+
 <div class="container">
+  <p class="error">{{error}}</p>
     <div class="row">
         <form name="logIn" ng-submit="submitLogIn(returningUser)" class="col s12">
             <div class="row">
